Remove current tasks bar

--- a/index.html
+++ b/index.html
@@ -34,13 +34,8 @@
       <input type="submit" value = "Create Task" class="transition duration-200 ease-in-out p-2 shadow rounded bg-white hover:bg-gray-100" >
     </form>
   </div>
-  <div class="float-right shadow rounded p-2 h-screen">
-    <h1 class='text-xl'>Current Tasks</h1>
-  </div> 
-	<script src="script.js">
-		
-      
-	</script>
+
+	<script src="script.js"></script>
 </body>
 
 </html>
