--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <div id="maindiv" class="transition duration-500 ease-in-out ">
 	<div class="transition duration-200 ease-in-out flex flex-row shadow p-2">
 		<p class="mr-auto">Nexus Aurora Task Board</p>
 		<div id="signin" onclick="signInWithDiscord()" class="transistion duration-200 ease-in-out p-2 cursor-pointer hover:bg-gray-100 inline-block shadow rounded cursor-pointer">
@@ -34,8 +35,19 @@
       <input type="submit" value = "Create Task" class="transition duration-200 ease-in-out p-2 shadow rounded bg-white hover:bg-gray-100" >
     </form>
   </div>
+  </div>
+  <div class="transition duration-500 ease-in-out p-2 hidden rounded shadow inline-block" id="feedback" netlify>
+    <form name="feedback">
+    <p>Please give us your feedback!<p>
+    <textarea name="textfeedback" class="outline-none rounded shadow resize-none"></textarea><br>
+    <input value="Submit" type="submit" class="transition mt-2 p-2 duration-200 ease-in-out bg-none outline-none hover:bg-gray-100 shadow rounded bg-transparent">
+    <input type="text" name="Discord Name" id="discord" class="hidden"></input>
+  </form>
+  </div>
 
-	<script src="script.js"></script>
+	<script src="script.js">
+    
+  </script>
 </body>
 
 </html>
